<resources>
    <string name="app_name">Sleep Reminders</string>

    <string name="schedule_activity">Sleep Alarm</string>
    <string name="time_textView">Set a time</string>
    <string name="cancel_alarm_button">Off</string>
    <string name="goto_phrases_button">Notifications</string>

    <string name="phrases_activity">Notifications</string>
    <string name="goto_schedule_button">Alarm</string>
    <string name="add_phrase_button">Add Quote</string>

    <string name="add_phrase_activity">Add/Edit Quote</string>
    <string name="add_phrase_editText_hint">Enter a reminder</string>
    <string name="cancel_add_phrase_button">Cancel</string>
    <string name="delete_phrase_button">Delete</string>
    <string name="save_phrase_button">Save</string>
</resources>
